--- a/core/templates/core/product_detail.html
+++ b/core/templates/core/product_detail.html
@@ -6,17 +6,27 @@
 {% endblock %}
 
 {% block content %}
-  <div class="product-detail">
-    <img src="{% if product.image %}{{ product.image.url }}{% else %}
-    {% static 'img/no_image.png' %}{% endif %}">
-    <h1>{{ product.name }}</h1>
-    <h2>
-      <a href="{{ product.category.get_absolute_url }}">
-        {{ product.category }}
-      </a>
-    </h2>
-    <p class="price">${{ product.price }}</p>
-
-    {{ product.description|linebreaks }}
+<div class="container">
+  <div class="row">
+    <div class="col-lg-3">
+      <h1 class="my-4">Shop Name</h1>
+      <div class="list-group">
+        <a href="{{ product.category.get_absolute_url }}">
+          {{ product.category }}
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-9">
+      <div class="card mt-4">
+        <img src="{% if product.image %}{{ product.image.url }}{% else %}
+        {% static 'img/no_image.png' %}{% endif %}">        <div class="card-body">
+          <h3 class="card-title">{{ product.name }}</h3>
+          <h4>${{ product.price }}</h4>
+          <p class="card-text">{{ product.description|linebreaks }}</p>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
 {% endblock %}
+
